# teaql-rust-app-examples

./: README.md
001-world-cpu-2006-cli/: .gitignore  README.md
001-world-cpu-2006-cli/generate-lib/: API_GUIDE.md
001-world-cpu-2006-cli/generate-lib/lib/src/: e.rs  q.rs  request_support.rs  runtime.rs
001-world-cpu-2006-cli/generate-lib/lib/src/card_category/: behavior.rs  checker.rs  entity.rs  expression.rs
001-world-cpu-2006-cli/generate-lib/lib/src/confederation/: expression.rs  mod.rs
001-world-cpu-2006-cli/generate-lib/lib/src/goal_category/: behavior.rs  checker.rs  entity.rs  mod.rs
001-world-cpu-2006-cli/generate-lib/lib/src/group_standing/: behavior.rs  expression.rs  mod.rs
001-world-cpu-2006-cli/generate-lib/lib/src/match_card/: behavior.rs  checker.rs  request.rs
001-world-cpu-2006-cli/generate-lib/lib/src/match_goal/: behavior.rs  checker.rs  mod.rs
001-world-cpu-2006-cli/rust-workspace/: .cursorrules  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
001-world-cpu-2006-cli/rust-workspace/src/: ansi.rs  commands.rs  lib.rs  main.rs  seed.rs
002-linux-sysinfo-using-teaql/: Cargo.toml
002-linux-sysinfo-using-teaql/modeling/: MODEL.xml
002-linux-sysinfo-using-teaql/rust-app-console/: Cargo.toml
002-linux-sysinfo-using-teaql/rust-app-console/src/: main.rs
002-linux-sysinfo-using-teaql/rust-lib-core/src/: e.rs  lib.rs  q.rs  request_support.rs  runtime.rs
002-linux-sysinfo-using-teaql/rust-lib-core/src/process/: checker.rs  entity.rs  expression.rs  mod.rs  request.rs
002-linux-sysinfo-using-teaql/rust-lib-core/src/system_info/: expression.rs  mod.rs  request.rs
002-linux-sysinfo-using-teaql/rust-lib-core/src/thread/: checker.rs  entity.rs  expression.rs  mod.rs
002-world-cup-2006-tui/: Dockerfile  README.md
002-world-cup-2006-tui/generate-lib/: TOOL_API.md
002-world-cup-2006-tui/generate-lib/lib/: AGENTS.md  Cargo.toml
002-world-cup-2006-tui/generate-lib/lib/src/: lib.rs  sample_data.rs
002-world-cup-2006-tui/generate-lib/lib/src/card_category/: mod.rs  request.rs
002-world-cup-2006-tui/generate-lib/lib/src/confederation/: behavior.rs  checker.rs  entity.rs  request.rs
002-world-cup-2006-tui/generate-lib/lib/src/goal_category/: expression.rs  request.rs
002-world-cup-2006-tui/generate-lib/lib/src/group_standing/: checker.rs  entity.rs  request.rs
002-world-cup-2006-tui/generate-lib/lib/src/match_card/: entity.rs  expression.rs  mod.rs
002-world-cup-2006-tui/generate-lib/lib/src/match_goal/: entity.rs  expression.rs  request.rs
002-world-cup-2006-tui/generate-lib/lib/src/match_stage/: behavior.rs  entity.rs  expression.rs  mod.rs  request.rs
002-world-cup-2006-tui/generate-lib/lib/src/match_status/: behavior.rs  checker.rs  entity.rs  mod.rs
002-world-cup-2006-tui/generate-lib/lib/src/tournament/: request.rs
002-world-cup-2006-tui/generate-lib/lib/src/tournament_match/: behavior.rs  checker.rs
002-world-cup-2006-tui/generate-lib/lib/src/tournament_team/: expression.rs  request.rs
002-world-cup-2006-tui/models/: model.xml
002-world-cup-2006-tui/rust-workspace/: Cargo.toml  test_calc.rs
002-world-cup-2006-tui/rust-workspace/src/: app.rs  fix_data.rs  main.rs  seed.rs  ui.rs
003-linux-sysinfo-using-teaql/: README.md
003-linux-sysinfo-using-teaql/rust-app-console/: Cargo.toml
003-linux-sysinfo-using-teaql/rust-app-console/src/: app.rs  main.rs  service.rs  ui.rs
003-linux-sysinfo-using-teaql/rust-lib-core/: Cargo.toml
003-linux-sysinfo-using-teaql/rust-lib-core/src/: sample_data.rs
003-linux-sysinfo-using-teaql/rust-lib-core/src/system_info/: checker.rs  entity.rs
003-linux-sysinfo-using-teaql/rust-lib-core/src/thread/: request.rs
(+22 files in other folders)
