[package]
name = "linux-system-info-core"
version = "0.1.0"
edition = "2021"
description = "Generated TeaQL service crate for linux-system-info"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teaql-core = { path = "/home/philip/githome/teaql-rs/teaql-core" }
teaql-macros = { path = "/home/philip/githome/teaql-rs/teaql-macros" }
teaql-runtime = { path = "/home/philip/githome/teaql-rs/teaql-runtime" }
teaql-sql = { path = "/home/philip/githome/teaql-rs/teaql-sql" }
teaql-data-service = { path = "/home/philip/githome/teaql-rs/teaql-data-service" }
teaql-provider-sqlite = { path = "/home/philip/githome/teaql-rs/teaql-provider-sqlite" }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "column_decltype"] }
teaql-provider-linux = { path = "/home/philip/githome/teaql-rs/teaql-provider-linux" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }