[package]
name = "fifa-world-cup-2026-service"
version = "0.1.0"
edition = "2021"
description = "Generated TeaQL service crate for fifa-world-cup-2026-service"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teaql-core = "4.0.3"
teaql-macros = "4.0.3"
teaql-runtime = "4.0.3"
teaql-sql = "4.0.3"
teaql-data-service = "4.0.3"
teaql-tool-core = "1.0.0"
teaql-provider-sqlite = "4.0.3"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "column_decltype"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }